# Mega-IIe

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
enclosure/: README.md
enclosure/Fusion 360/: Back Panel for export mk2 v1.f3d  PS Standoff v3.f3d  Power LED Holder v8.f3d  reset keys v2.f3d  speaker mount mk1 v4.f3d  standoff for lid v3.f3d
enclosure/STLs/: Floor - Body66 v4.stl  Lid - Body34 rev3.stl  PS Standoff v2.stl  Power LED Holder v3.stl  Rear Panel - Body1 v5.stl  Reset Key - Body1.stl  Stand Off for lid v1.stl  Top - Body19v4.stl  speaker mount mk1 v4.stl
firmware/IIe-keyboard_emulator/: .gitignore  CMakeLists.txt  IIe-keyboard_emulator.c  IIe-keyboard_emulator.h  build - Shortcut.lnk  pico_sdk_import.cmake
firmware/IIe-keyboard_emulator/key mapping/: key-mapper-csv-to-c.py  mapping-rev1.csv
firmware/IIe-keyboard_emulator/src/: IIe-keyboard_emulator.c  KBD.pio  constants.h  enums.h  iie_hid_app.c  iie_hid_app.h  kbd_pio_handler.c  keyboard_mapping.h  mcp4541.c  mcp4541.h  pins_rev2.h  pins_rev3.h  power_sequence.c  tusb_config.h  utils.c  utils.h
firmware/dma-vga-test/: .gitignore  CMakeLists.txt  README.md  array_to_image.py  decoding_notes.md  dma-vga-test.c  other_array_to_png.py
firmware/integrated-code-test/: README.md
firmware/mega2_picovga/: Makefile.inc  README.md  Readme_PicoVga.txt  Readme_sdk.txt  workspace.code-workspace
firmware/vga2040/: CMakeLists.txt  global.h  vga2040.c
kicad files/: Apple_IIgs_Symbols.dcm  README.md  WDC 65C02.dcm
kicad files/KiCad_Symbols/: Apple_IIgs_Symbols.dcm  WDC 65c816s.dcm
kicad files/MegaII Breakout/: MegaII Breakout.kicad_pcb  MegaII Breakout.kicad_pro  MegaII Breakout.kicad_sch  MegaII Breakout.sch  README.md  sym-lib-table
kicad files/ROM Interposer board/: README.md  ROM Interposer board.kicad_pcb  ROM Interposer board.kicad_pro  ROM Interposer board.kicad_sch  ROM Interposer board.pro  ROM Interposer board.sch
kicad files/gd 6502 proto pcb/: README.md  gd 6502 proto pcb.kicad_pcb  gd 6502 proto pcb.kicad_pro  gd 6502 proto pcb.kicad_sch  gd 6502 proto pcb.pro  gd 6502 proto pcb.sch  sym-lib-table
kicad files/gd IWM proto pcb/: gd IWM proto pcb.kicad_pcb  gd IWM proto pcb.kicad_pro  gd IWM proto pcb.pro  gd IWM proto pcb.sch
kicad files/gd MEGA-65c02 proto pcb/: gd MEGA-65c02 proto pcb.kicad_pcb  gd MEGA-65c02 proto pcb.kicad_pro  gd MEGA-65c02 proto pcb.kicad_sch  gd MEGA-65c02 proto pcb.pro  gd MEGA-65c02 proto pcb.sch
kicad files/gd MegaII proto pcb/: README.md  gd MegaII proto pcb.kicad_pcb  gd MegaII proto pcb.kicad_pro  gd MegaII proto pcb.kicad_sch  gd MegaII proto pcb.pro  gd MegaII proto pcb.sch  sym-lib-table
waveforms decoders/: 6502 decoder.js  README.md  apple IIe ROM decoder.js
(+237 files in other folders)
